--- a/about.html
+++ b/about.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Page</title>
-    <link rel="stylesheet" href="screen.css">
-  </head>
-  <body>
-    <h1>About Page</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-      </ul>
-    </nav>
-    <script src="index.js"></script>
-  </body>
-</html>
+  <main>
+    <section>
+        <h2>About the Author</h2>
+        <img src="IMG_6231.jpg" alt="Author Image">
+        <p>Madelynn Yang is a 3rd year student at Michigan State University, majoring in Information Science & IT.</p>
+        <h3>I am passionate about technology and how it can be used to solve real-world problems. My journey in IT has allowed me to explore everything from web development to data analysis, and I am always eager to learn more. When I am not immersed in tech, I enjoy staying active with Pilates, discovering new skincare routines, and spending time with friends. This blog is a space for me to share my interests, experiences, and tips on balancing student life with career growth.</h3>
+        <ul>
+            <li>Pilates</li>
+            <li>Health & Beauty</li>
+            <li>Aspirations</li>
+        </ul>
+    </section>
+</main>
