--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Madelynn's Blog</title>
   </head>
   <body>
+    <!-- Navigation Header -->
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <main>
       <article>
         <h2>Skincare Basics</h2>
@@ -26,6 +37,7 @@
           One of the biggest benefits of Pilates is that it engages both the mind and body. The workout requires focus on breathing and muscle engagement, making it a great way to reduce stress while exercising. It is also gentle on the joints, which is perfect for people recovering from injury or those seeking a low-impact routine.
           Over time, consistent Pilates practice can lead to increased flexibility, better core strength, and toned muscles. Plus, it is adaptable—whether you have 10 minutes or an hour, you can easily fit Pilates into your schedule.</p>
         
+        <!-- Table showing Pilates workout schedule -->
         <h3>Pilates Weekly Schedule</h3>
         <table>
           <thead>
@@ -56,6 +68,7 @@
       </article>
     </main>
 
+    <!-- Newsletter Signup Form -->
     <footer>
       <h3>Sign Up for Our Newsletter</h3>
       <form action="#">
